syntax = "proto3";

import "validate/validate.proto";

message Encoder {
    message SentenceTransformer {
    }

    oneof encoder {
        SentenceTransformer sentence_transformer = 3;
    }
}